# pallete-2981

./: 2981.md  Cargo.toml
pallets/2981/: Cargo.toml
pallets/royalty/: Cargo.toml  README.md
pallets/royalty/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
